--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
 
         <nav>
             <i class="fa-solid fa-location-dot"></i>
-            <div class="search titre-roboto-2">Paris, Belleville</div>    
+            <div class="search">
+                <h2>Paris, Belleville</h2>
+            </div>    
         </nav>
 
         <main>
             <article>
                 <section class="reserved">
                     <h1>Réservez le menu qui vous convient</h1>
-                    <h2>Découvrez des restaurants d'exception, sélectionnés par nos soins</h2>
+                    <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                     <div class="btn">
-                    <div>Explorer nos restaurants</div>
+                    <button>Explorer nos restaurants</button>
                     </div>
                 </section>
           
@@ -38,15 +40,15 @@
                     <div class="all-buttons">
                         <div class="btn__fonction">
                             <i>logo téléphone</i>
-                            <p>Choisissez un restaurant</p>
+                            <h2>Choisissez un restaurant</h2>
                         </div>
                         <div class="btn__fonction">
                             <i>logo menu</i>
-                            <p>Composez votre menu</p>
+                            <h2>Composez votre menu</h2>
                         </div>
                         <div class="btn__fonction">
                             <i>logo restaurant</i>
-                            <p>Dégustez au restaurant</p>
+                            <h2>Dégustez au restaurant</h2>
                         </div>
                     </div>
                 </section>
