resolution affichage img

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="homepage">
             <i class="fa-solid fa-arrow-left"></i>
             <div class="homepage__logo">
-                <img src="/images/logo/ohmyfood@2x.svg" alt="logo OhMyFood"/>
+                <img src="images/logo/ohmyfood@2x.svg" alt="logo OhMyFood"/>
             </div>
         </header>
 
