--- a/index.html
+++ b/index.html
@@ -57,35 +57,79 @@
 
                 <section class="restaurant">
                     <h1>Restaurants</h1>
-                 <article class="restaurant__all">
-                    <a href="alafrançaise.html" class="restaurant__child">
-                    <div class="btn__nouveau">Nouveau</div>
-                    <caption>
-                        <img src="" alt="Restaurant de qualité !"/>
-                    </caption>
-                    <figcaption>
-                    <div>
-                        <h1>La palette du goût</h1>
-                        <p>Ménilmontant</p>
-                    </div>
-                    <i>Logo coeur</i>
-                    </figcaption>
-                    </a>
-                </article>
+                    <article class="restaurant__allcards">
+                        <a href="#" class="restaurant__card new">
+                          <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant de qualité !"/>
+                            <figcaption>
+                                <div class="restaurant__text">
+                                    <h2>La palette du goût</h2>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="fa-heart fas"></i>
+                                    <i class="fa-heart far"></i>
+                                </div>
+                            </figcaption>
+                        </a>
+                        <a href="#" class="restaurant__card new">
+                          <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant de qualité !"/>
+                            <figcaption>
+                                <div class="restaurant__text">
+                                    <h2>La note enchantée</h2>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="fa-heart fas"></i>
+                                    <i class="fa-heart far"></i>
+                                </div>
+                            </figcaption>
+                        </a>
+                        <a href="#" class="restaurant__card new">
+                          <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant de qualité !"/>
+                            <figcaption>
+                                <div class="restaurant__text">
+                                    <h2>A la française</h2>
+                                    <p>Cité Rouge</p>
+                                </div>
+                                <div class="heart">
+                                    <i class="fa-heart fas"></i>
+                                    <i class="fa-heart far"></i>
+                                </div>
+                            </figcaption>
+                        </a>
+                        <a href="#" class="restaurant__card new">
+                          <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant de qualité !"/>
+                            <figcaption>
+                                <div class="restaurant__text">
+                                    <h2>Le délice des sens</h2>
+                                    <p>Folie-Méricourt</p>
+                                  </div>
+                                  <div class="heart">
+                                    <i class="fa-heart fas"></i>
+                                    <i class="fa-heart far"></i>
+                                </div>
+                            </figcaption>
+                        </a>
+                    </article>
                 </section>
             </article>
         </main>
 
 
         <footer>
-            <nav>
-                <ul>
-                  <li>Proposer un Restaurant</li>
-                  <li>Devenir partenaire</li>
-                  <li>Mentions légales</li>
-                  <li>Contact</li>
-                </ul>
-              </nav>
+            <div class="title">ohmyfood</div>
+            <ul class="footer__items">
+                <li>
+                    <i class="fa solid fa-utensils"></i>
+                    Proposer un Restaurant
+                </li>
+                <li>
+                    <i class="fa solid fa-handshake-angle"></i>
+                    Devenir partenaire
+                </li> 
+                <li>Mentions légales</li>
+                <li>Contact</li>
+            </ul>
         </footer>
     </body>
 </html>
