--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="/sass/main.css">
         <link rel="stylesheet" href="https://fonts.google.com/specimen/Shrikhand?query=Shrikhand#standard-styles">
         <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
-
         <title>OhMyFood</title>
     </head>
 
     <body>
-        <header class="homepage">
+        <header class="header">
             <i class="fa-solid fa-arrow-left"></i>
-            <div class="homepage__logo">
+            <h1 class="header__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="logo OhMyFood"/>
-            </div>
+            </h1>
         </header>
 
         <nav>
@@ -58,8 +57,8 @@
                 <section class="restaurant">
                     <h1>Restaurants</h1>
                     <article class="restaurant__allcards">
-                        <a href="#" class="restaurant__card new">
-                          <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant de qualité !"/>
+                        <a href="/menu/lapalettedugout.html" class="restaurant__card new">
+                            <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <figcaption>
                                 <div class="restaurant__text">
                                     <h2>La palette du goût</h2>
@@ -71,8 +70,8 @@
                                 </div>
                             </figcaption>
                         </a>
-                        <a href="#" class="restaurant__card new">
-                          <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant de qualité !"/>
+                        <a href="/menu/lanoteenchantee.html" class="restaurant__card new">
+                            <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <figcaption>
                                 <div class="restaurant__text">
                                     <h2>La note enchantée</h2>
@@ -84,8 +83,8 @@
                                 </div>
                             </figcaption>
                         </a>
-                        <a href="#" class="restaurant__card new">
-                          <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant de qualité !"/>
+                        <a href="/menu/alafrançaise.html" class="restaurant__card new">
+                            <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <figcaption>
                                 <div class="restaurant__text">
                                     <h2>A la française</h2>
@@ -97,14 +96,14 @@
                                 </div>
                             </figcaption>
                         </a>
-                        <a href="#" class="restaurant__card new">
-                          <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant de qualité !"/>
+                        <a href="/menu/ledelicedessens.html" class="restaurant__card new">
+                            <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <figcaption>
                                 <div class="restaurant__text">
                                     <h2>Le délice des sens</h2>
                                     <p>Folie-Méricourt</p>
-                                  </div>
-                                  <div class="heart">
+                                </div>
+                                <div class="heart">
                                     <i class="fa-heart fas"></i>
                                     <i class="fa-heart far"></i>
                                 </div>
@@ -117,18 +116,22 @@
 
 
         <footer>
-            <div class="title">ohmyfood</div>
+            <div class="footer__title">ohmyfood</div>
             <ul class="footer__items">
                 <li>
                     <i class="fa solid fa-utensils"></i>
-                    Proposer un Restaurant
+                    <a href="#">Proposer un Restaurant</a>
                 </li>
                 <li>
                     <i class="fa solid fa-handshake-angle"></i>
-                    Devenir partenaire
+                    <a href="#">Devenir partenaire</a>
                 </li> 
-                <li>Mentions légales</li>
-                <li>Contact</li>
+                <li>
+                    <a href="#">Mentions légales</a>
+                </li>
+                <li>
+                    <a href="mailto:example@ohmyfood.com">Contact</a>
+                </li>
             </ul>
         </footer>
     </body>
