--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     </head>
 
     <body>
+        <div class="loader disappear">
+            <div class="loader__container"></div>
+            <div class="loader__circle--1"></div>
+            <div class="loader__circle--2"></div>
+            <div class="loader__circle--3"></div>
+          </div>
+
         <header class="header">
-            <i class="fa-solid fa-arrow-left"></i>
             <h1 class="header__logo">
                 <img src="images/logo/ohmyfood@2x.svg" alt="logo OhMyFood"/>
             </h1>
