--- a/menu/lanoteenchantee.html
+++ b/menu/lanoteenchantee.html
@@ -4,16 +4,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="/sass/main.css">
-      <link rel="stylesheet" href="https://fonts.google.com/specimen/Shrikhand?query=Shrikhand#standard-styles">
       <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
-      <title>OhMyFood</title>
+      <title>Menu - La note enchantée</title>
   </head>
 
   <body>
     <header>
       <div class="header header--withbackarrow">
         <h1 class="header__logo">
-          <a href="../index.html"></a><i class="fa-solid fa-arrow-left header__arrow"></i>
+          <a href="../index.html"><i class="fa-solid fa-arrow-left header__arrow"></i></a>
           <img src="../images/logo/ohmyfood.png" alt="Logo de la socièté 'Ohmyfood' "/>
         </h1>
       </div>
@@ -23,25 +22,161 @@
 
     <main class="menu container">
       <header class="menu__header">
-        <h2 class="menu__title">Ma note enchantée</h2>
+        <h2 class="menu__title">la note enchantée</h2>
         <div class="heart">
           <i class="fa-heart fas"></i>
           <i class="fa-heart far"></i>
         </div>
       </header>
-  
-      <article>
+
+      <article class="sousmenus">
         <section class="sousmenu">
           <h3 class="sousmenu__title">Entrées</h3>
-          <section class="sousmenu__item"></section>
-            <header class="sousmenu__header">
-              <div class="sousmenu__price">25€</div>
-              <div class="sousmenu__done"></div>
-            </header>
+          <div class="menuitem delay-1">
+            <div class="menuitem__header">
+              <h2 class="truncated">Ravioles de foie gras</h2>
+              <p class="truncated">Accompagnés de leur crème à la truffe</p>
+            </div>
+            <div class="menuitem__price">25€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-2">
+            <div class="menuitem__header">
+              <h2 class="truncated">Caviar osciètre</h2>
+              <p class="truncated">Sur blini à la farine de blé noir</p>
+            </div>
+            <div class="menuitem__price">35€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-3">
+            <div class="menuitem__header">
+              <h2 class="truncated">Homard et espuma de potiron </h2>
+              <p class="truncated">Mariné aux zestes d'orange</p>
+            </div>
+            <div class="menuitem__price">20€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-4">
+            <div class="menuitem__header">
+              <h2 class="truncated">Foie gras de canard cuit entier</h2>
+              <p class="truncated">Confiture de figue et pain toasté</p>
+            </div>
+            <div class="menuitem__price">35€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="sousmenu">
+          <h3 class="sousmenu__title">Plats</h3>
+          <div class="menuitem delay-5">
+            <div class="menuitem__header">
+              <h2 class="truncated">Noix de coquilles Saint-Jacques</h2>
+              <p class="truncated">Sur lit de purée de céleri-rave</p>
+            </div>
+            <div class="menuitem__price">40€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-6">
+            <div class="menuitem__header">
+              <h2 class="truncated">Langoustine poêlée</h2>
+              <p class="truncated">Purée de patate douce</p>
+            </div>
+            <div class="menuitem__price">35€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-7">
+            <div class="menuitem__header">
+              <h2 class="truncated">Mijoté de queue de boeuf </h2>
+              <p class="truncated">Et riz sauvage aux zestes de citron</p>
+            </div>
+            <div class="menuitem__price">44€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="sousmenu">
+          <h3 class="sousmenu__title">Desserts</h3>
+          <div class="menuitem delay-8">
+            <div class="menuitem__header">
+              <h2 class="truncated">Macaron noisette et chocolat</h2>
+              <p class="truncated">Glace au caramel brun et sel de Guérande</p>
+            </div>
+            <div class="menuitem__price">18€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-9">
+            <div class="menuitem__header">
+              <h2 class="truncated">Baba au rhum revisité </h2>
+              <p class="truncated">Avec son coulis de citron</p>
+            </div>
+            <div class="menuitem__price">22€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-10">
+            <div class="menuitem__header">
+              <h2 class="truncated">Tarte au citron meringuée </h2>
+              <p class="truncated">Déstructurée</p>
+            </div>
+            <div class="menuitem__price">23€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
         </section>
       </article>
-  
-  
-    </main>  
+
+      <section class="commander">
+        <div class="reserved__btn">
+          <button>Commander</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer__title">ohmyfood</div>
+      <ul class="footer__items">
+        <li><i class="fa solid fa-utensils"></i><a href="#">Proposer un Restaurant</a></li>
+        <li><i class="fa solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li> 
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:example@ohmyfood.com">Contact</a></li>
+      </ul>
+    </footer>  
   </body>
 </html> 
