--- a/menu/ledelicedessens.html
+++ b/menu/ledelicedessens.html
@@ -4,16 +4,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="/sass/main.css">
-      <link rel="stylesheet" href="https://fonts.google.com/specimen/Shrikhand?query=Shrikhand#standard-styles">
       <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
-      <title>OhMyFood</title>
+      <title>Menu - Le délice des sens</title>
   </head>
 
   <body>
     <header>
       <div class="header header--withbackarrow">
         <h1 class="header__logo">
-          <a href="../index.html"></a><i class="fa-solid fa-arrow-left header__arrow"></i>
+          <a href="../index.html"><i class="fa-solid fa-arrow-left header__arrow"></i></a>
           <img src="../images/logo/ohmyfood.png" alt="Logo de la socièté 'Ohmyfood' "/>
         </h1>
       </div>
@@ -29,19 +28,143 @@
           <i class="fa-heart far"></i>
         </div>
       </header>
-  
-      <article>
+
+      <article class="sousmenus">
         <section class="sousmenu">
           <h3 class="sousmenu__title">Entrées</h3>
-          <section class="sousmenu__item"></section>
-            <header class="sousmenu__header">
-              <div class="sousmenu__price">25€</div>
-              <div class="sousmenu__done"></div>
-            </header>
+          <div class="menuitem delay-1">
+            <div class="menuitem__header">
+              <h2 class="truncated">Tartare de thon</h2>
+              <p class="truncated">Assaisonné au yuzu</p>
+            </div>
+            <div class="menuitem__price">25€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-2">
+            <div class="menuitem__header">
+              <h2 class="truncated">Bouchée de homard croustillant </h2>
+              <p class="truncated">Et sa farandole de petits légumes</p>
+            </div>
+            <div class="menuitem__price">35€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-3">
+            <div class="menuitem__header">
+              <h2 class="truncated">Velouté de cèpes</h2>
+              <p class="truncated">Aux truffes</p>
+            </div>
+            <div class="menuitem__price">20€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="sousmenu">
+          <h3 class="sousmenu__title">Plats</h3>
+          <div class="menuitem delay-4">
+            <div class="menuitem__header">
+              <h2 class="truncated">Poulet rôti aux herbes de Provence </h2>
+              <p class="truncated">Et sa crème de truffe</p>
+            </div>
+            <div class="menuitem__price">40€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-5">
+            <div class="menuitem__header">
+              <h2 class="truncated">Langouste rôtie</h2>
+              <p class="truncated">Et ses légumes de saison</p>
+            </div>
+            <div class="menuitem__price">35€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-6">
+            <div class="menuitem__header">
+              <h2 class="truncated">Côte de boeuf Angus</h2>
+              <p class="truncated">Et sa purée de panais</p>
+            </div>
+            <div class="menuitem__price">44€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="sousmenu">
+          <h3 class="sousmenu__title">Desserts</h3>
+          <div class="menuitem delay-7">
+            <div class="menuitem__header">
+              <h2 class="truncated">Farandole de desserts</h2>
+              <p class="truncated">Du chef</p>
+            </div>
+            <div class="menuitem__price">18€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-8">
+            <div class="menuitem__header">
+              <h2 class="truncated">Crème brulée </h2>
+              <p class="truncated">Revisitée</p>
+            </div>
+            <div class="menuitem__price">22€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menuitem delay-9">
+            <div class="menuitem__header">
+              <h2 class="truncated">Tiramisu</h2>
+              <p class="truncated">À la noisette</p>
+            </div>
+            <div class="menuitem__price">23€</div>
+            <div class="menuitem__done">
+              <div class="menuitem__wrap">
+                <i class="menuitem__icon fas fa-check"></i>
+              </div>
+            </div>
+          </div>
         </section>
       </article>
-  
-  
-    </main>  
+
+      <section class="commander">
+        <div class="reserved__btn">
+          <button>Commander</button>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footer__title">ohmyfood</div>
+      <ul class="footer__items">
+        <li><i class="fa solid fa-utensils"></i><a href="#">Proposer un Restaurant</a></li>
+        <li><i class="fa solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a></li> 
+        <li><a href="#">Mentions légales</a></li>
+        <li><a href="mailto:example@ohmyfood.com">Contact</a></li>
+      </ul>
+    </footer>  
   </body>
 </html> 
