Projet done & W3C validator passed

--- a/menu/alafrançaise.html
+++ b/menu/alafrançaise.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="sass/main.css">
+      <link rel="stylesheet" href="/sass/main.css">
       <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
       <title>Menu - A la française</title>
   </head>
@@ -151,11 +151,11 @@
         </section>
       </article>
 
-      <section class="commander">
+      <div class="commander">
         <div class="reserved__btn">
           <button>Commander</button>
         </div>
-      </section>
+      </div>
     </main>
     <footer>
       <div class="footer__title">ohmyfood</div>
