--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class=search>
                 <i class="fa-solid fa-location-dot"></i>
                 <div class="search__bar">
-                    <h2>Paris, Belleville</h2>
+                    <h3>Paris, Belleville</h3>
                 </div>   
             </div> 
         </nav>
@@ -35,7 +35,7 @@
         <main>
             <article>
                 <section class="reserved">
-                    <h1>Réservez le menu qui vous convient</h1>
+                    <h2>Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
                     <div class="reserved__btn">
                     <button>Explorer nos restaurants</button>
@@ -43,29 +43,29 @@
                 </section>
           
                 <section class="function">
-                    <h1>Fonctionnement</h1>
+                    <h2>Fonctionnement</h2>
                     <ol class="function__buttons">
                         <li class="function__btn">
                             <i class="fa-solid fa-mobile-screen-button"></i>
-                            <h2>Choisissez un restaurant</h2>
+                            <h3>Choisissez un restaurant</h3>
                         </li>
                         <li class="function__btn">
                             <i class="fa-solid fa-list"></i>
-                            <h2>Composez votre menu</h2>
+                            <h3>Composez votre menu</h3>
                         </li>
                         <li class="function__btn">
                             <i class="fa-solid fa-shop"></i>
-                            <h2>Dégustez au restaurant</h2>
+                            <h3>Dégustez au restaurant</h3>
                         </li>
                     </ol>
                 </section>
 
                 <section class="restaurant">
-                    <h1>Restaurants</h1>
-                    <article class="restaurant__allcards">
+                    <h2>Restaurants</h2>
+                    <div class="restaurant__allcards">
                         <a href="/menu/lapalettedugout.html" class="restaurant__card new">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant de qualité !"/>
-                            <figcaption>
+                            <div class="restaurant__description">
                                 <div class="restaurant__text">
                                     <h2>La palette du goût</h2>
                                     <p>Ménilmontant</p>
@@ -74,11 +74,11 @@
                                     <i class="fa-heart fas"></i>
                                     <i class="fa-heart far"></i>
                                 </div>
-                            </figcaption>
+                            </div>
                         </a>
                         <a href="/menu/lanoteenchantee.html" class="restaurant__card new">
                             <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant de qualité !"/>
-                            <figcaption>
+                            <div class="restaurant__description">
                                 <div class="restaurant__text">
                                     <h2>La note enchantée</h2>
                                     <p>Charonne</p>
@@ -87,11 +87,11 @@
                                     <i class="fa-heart fas"></i>
                                     <i class="fa-heart far"></i>
                                 </div>
-                            </figcaption>
+                            </div>
                         </a>
-                        <a href="/menu/alafrançaise.html" class="restaurant__card new">
+                        <a href="/menu/alafrançaise.html" class="restaurant__card">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant de qualité !"/>
-                            <figcaption>
+                            <div class="restaurant__description">
                                 <div class="restaurant__text">
                                     <h2>A la française</h2>
                                     <p>Cité Rouge</p>
@@ -100,11 +100,11 @@
                                     <i class="fa-heart fas"></i>
                                     <i class="fa-heart far"></i>
                                 </div>
-                            </figcaption>
+                            </div>
                         </a>
-                        <a href="/menu/ledelicedessens.html" class="restaurant__card new">
+                        <a href="/menu/ledelicedessens.html" class="restaurant__card">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant de qualité !"/>
-                            <figcaption>
+                            <div class="restaurant__description">
                                 <div class="restaurant__text">
                                     <h2>Le délice des sens</h2>
                                     <p>Folie-Méricourt</p>
@@ -113,9 +113,9 @@
                                     <i class="fa-heart fas"></i>
                                     <i class="fa-heart far"></i>
                                 </div>
-                            </figcaption>
+                            </div>
                         </a>
-                    </article>
+                    </div>
                 </section>
             </article>
         </main>
