--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="sass/main.css">
-        <link rel="stylesheet" href="https://fonts.google.com/specimen/Shrikhand?query=Shrikhand#standard-styles">
         <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
         <title>OhMyFood</title>
     </head>
@@ -63,7 +62,7 @@
                 <section class="restaurant">
                     <h2>Restaurants</h2>
                     <div class="restaurant__allcards">
-                        <a href="/menu/lapalettedugout.html" class="restaurant__card new">
+                        <a href="menu/lapalettedugout.html" class="restaurant__card new">
                             <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <div class="restaurant__description">
                                 <div class="restaurant__text">
@@ -76,7 +75,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/menu/lanoteenchantee.html" class="restaurant__card new">
+                        <a href="menu/lanoteenchantee.html" class="restaurant__card new">
                             <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <div class="restaurant__description">
                                 <div class="restaurant__text">
@@ -89,7 +88,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/menu/alafrançaise.html" class="restaurant__card">
+                        <a href="menu/alafrançaise.html" class="restaurant__card">
                             <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <div class="restaurant__description">
                                 <div class="restaurant__text">
@@ -102,7 +101,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="/menu/ledelicedessens.html" class="restaurant__card">
+                        <a href="menu/ledelicedessens.html" class="restaurant__card">
                             <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant de qualité !"/>
                             <div class="restaurant__description">
                                 <div class="restaurant__text">
