--- a/menu/ledelicedessens.html
+++ b/menu/ledelicedessens.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="/sass/main.css">
+      <link rel="stylesheet" href="../sass/main.css">
       <script src="https://kit.fontawesome.com/52fa043bb6.js" crossorigin="anonymous"></script>
       <title>Menu - Le délice des sens</title>
   </head>
